tests/src/frontend/syntax/invalid/lvalue_bang_non_lvalue.sk
fun main(): String {
  !f() = 42;
  "Fail"
}
